act ajustes varios

--- a/pages/interior.html
+++ b/pages/interior.html
@@ -28,8 +28,8 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/interior.html"><del>interior</del></a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/asesoramiento.html">asesoramiento</a></li>
@@ -117,7 +117,7 @@
                 </div>    
             </div>
             <div class="aa">  
-                <p class="a">El ficus lyrata es una planta que añade mucha naturaleza a tu casa gracias a sus ramas grandes y arqueadas, y a sus hojas puntiagudas. Su forma de arbolito quedará perfecto al lado de un gran ventanal, al pie de una escalera, junto al sofá o en cualquier rincón que necesite un subidón de vida y alegría verde. Además, ¡son muy resistentes!</p>
+                <p class="a">ficus lyrata es una planta que añade mucha naturaleza a tu casa gracias a sus ramas grandes y arqueadas, y a sus hojas puntiagudas. Su forma de arbolito quedará perfecto al lado de un gran ventanal, al pie de una escalera, junto al sofá o en cualquier rincón que necesite un subidón de vida y alegría verde. Además, ¡son muy resistentes!</p>
             </div> 
         </div>
 
