--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="evergreen | plantas para tu hogar">
     <meta property="og:url" content="https://brandonleonel.github.io/proyecto1/">
     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9ocTQYRI08elrLCX8Pax4oVaetCGTtVXZdw&usqp=CAU">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="./icons/planta.png" type="image/x-icon">
@@ -33,7 +33,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html"><del>Inicio</del></a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/aromaticas.html">aromaticas</a></li>
@@ -55,30 +55,30 @@
         <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./img/plagaOruga.png" class="d-block w-100 img-fluid img-carousel" alt="articulo sobre plagas">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>plagas</h5>
-                        <p>atencion con la plaga de orugas en trigo</p>
+                    <div class="carousel-caption d-none d-md-block background-carousel-texto">
+                        <h5 class="font-size-h5">plagas</h5>
+                        <p class="font-size-p-carousel">cuidado con la plaga de orugas en trigo</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/huertaEnCasa.png" class="d-block w-100 img-fluid img-carousel" alt="articulo sobre las huertas en casa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>huerta en casa</h5>
-                        <p>todos los beneficios de tener una huerta en el patio de tu casa</p>
+                    <div class="carousel-caption d-none d-md-block background-carousel-texto">
+                        <h5 class="font-size-h5">huerta en casa</h5>
+                        <p class="font-size-p-carousel">todos los beneficios de tener una huerta en el patio de tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/datoCarrousel.png" class="d-block w-100 img-fluid img-carousel" alt="articulo de como germinar semillas en casa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>frutas que podes germinar en tu casa</h5>
-                        <p>algunas de las frutas faciles de germinar y cultivar en tu casa</p>
+                    <div class="carousel-caption d-none d-md-block background-carousel-texto">
+                        <h5 class="font-size-h5">germinar semillas en tu casa</h5>
+                        <p class="font-size-p-carousel">algunas de las frutas faciles de germinar y cultivar en tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/compost.png" class="d-block w-100 img-fluid img-carousel" alt="articulo de como hace compost en casa">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>compost casero</h5>
-                        <p>como hacer tu propio compost en casa</p>
+                    <img src="./img/compost.png" class="d-block w-100 img-fluid img-carousel" alt="articulo de como hacer compost en casa">
+                    <div class="carousel-caption d-none d-md-block background-carousel-texto">
+                        <h5 class="font-size-h5">compost casero</h5>
+                        <p class="font-size-p-carousel">como hacer tu propio compost en casa</p>
                     </div>
                 </div>
         </div>
@@ -128,7 +128,7 @@
             <img src="./img/semillasCespedDeportivo.png" class="card-img-top img-productos" alt="semillas de cesped deportivo">
             <div class="card-body">
                 <h5 class="card-title">semillas cesped deportivo</h5>
-                <p class="card-text">cesped para deportes.</p>
+                <p class="card-text">cesped para deportes muy resistente.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
