--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -28,10 +28,10 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link"href="../index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/aromaticas.html"><del>aromaticas</del></a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/asesoramiento.html">asesoramiento</a></li>
                         </ul>
                     </div>
