--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -28,9 +28,9 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/exterior.html"><del>exterior</del></a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/asesoramiento.html">asesoramiento</a></li>
                         </ul>
@@ -45,7 +45,7 @@
             </div>
 
     <div class="grid-plantas">
-        
+
         <div class="card1 contenedor-cards">
             <div class="card1P3 cards">
                 <div class="caja-imgCard1 caja-imgCards">
