--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -15,14 +15,14 @@
 <body>
     <div class="grilla-general">
         <div class="caja-iconos"> 
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.png" alt="icono de whatsapp"></a> 
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/instagramP.png" alt="icono de instagram"></a>
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/pinterestP.png" alt="icono de pinterest"></a>
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.ico" alt="icono de whatsapp"></a> 
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/instagramP.ico" alt="icono de instagram"></a>
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/pinterestP.ico" alt="icono de pinterest"></a>
         </div>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="logo de la página" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
+                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.ico" alt="logo de la página" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
