--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -15,7 +15,7 @@
 <body>
     <div class="grilla-general">
         <div class="caja-iconos"> 
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.ico alt="icono de whatsapp"></a> 
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.ico" alt="icono de whatsapp"></a> 
             <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/instagramP.ico" alt="icono de instagram"></a>
             <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/pinterestP.ico" alt="icono de pinterest"></a>
         </div>
