--- a/pages/interior.html
+++ b/pages/interior.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="productos de jardinerias, plantas, cuidados de las plantas, consultas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../icons/planta.ico" type="image/x-icon">
     <title>plantas para tu hogar</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
