--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html"><del>Inicio</del></a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pages/aromaticas.html">aromaticas</a></li>
@@ -63,7 +63,7 @@
                 <div class="carousel-item">
                     <img src="./img/huertaEnCasa.png" class="d-block w-100 img-fluid img-carousel" alt="articulo sobre las huertas en casa">
                     <div class="carousel-caption d-none d-md-block background-carousel-texto">
-                        <h5 class="font-size-h5">huerta en casa</h5>
+                        <h5 class="font-size-h5">tu propia huerta en casa</h5>
                         <p class="font-size-p-carousel">todos los beneficios de tener una huerta en el patio de tu casa</p>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
     </main>
     <footer>
         <div class="footer-izquierda">
-            <p class="p-mapa">encontranos acá</p>
+            <p class="p-mapa"><b>encontranos acá</b></p>
             <iframe 
                 class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
@@ -253,6 +253,7 @@
             </iframe>
         </div>
         <div class="footer-derecha">
+            <p><b>contacto</b></p>
             <p><b>email: </b>brandonleonel12@gmail.com</p>
             <p><b>celular: </b>1112223334</p>
         </div>
