--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -32,7 +32,7 @@
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./pages/asesoramiento.html"><del>asesoramiento</del></a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./pages/asesoramiento.html">asesoramiento</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
     </main>
 <footer>
     <div class="footer-izquierda">
-        <p class="p-mapa">encontranos acá</p>
+        <p class="p-mapa"><b>encontranos acá</b></p>
             <iframe 
                 class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
@@ -69,6 +69,7 @@
             </iframe>
     </div>
     <div class="footer-derecha">
+        <p><b>contacto</b></p>
         <p><b>email: </b>brandonleonel12@gmail.com</p>
         <p><b>celular: </b>1112223334</p>
     </div>
