--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="catalogo de plantas de aromaticas para darle vidad a tu hogar">
     <meta name="keywords" content="productos de jardinerias, plantas, cuidados de las plantas, consultas">
-        <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../icons/planta.ico" type="image/x-icon">
     <title>plantas para tu hogar</title>
@@ -45,7 +45,8 @@
             </div>
 
     <div class="grid-plantas">
-        <div class="card1 contenedor-cards">
+
+        <div data-aos="fade-right" class="card1 contenedor-cards">
             <div class="card1P4 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/albahaca.png" alt="albahaca">
@@ -61,7 +62,7 @@
 
 
 
-        <div class="card2 contenedor-cards">
+        <div data-aos="fade-left" class="card2 contenedor-cards">
             <div class="card2P4 cards">
                 <div class="caja-imgCard2 caja-imgCards">
                     <img class="imgCard2 imgCards" src="../img/cilantro.png" alt="cilantro">
@@ -77,7 +78,7 @@
 
 
 
-        <div class="card3 contenedor-cards">
+        <div data-aos="fade-right" class="card3 contenedor-cards">
             <div class="card3P4 cards">
                 <div class="caja-imgCard3 caja-imgCards">
                     <img class="imgCard3 imgCards" src="../img/eneldo.png" alt="eneldo">
@@ -93,7 +94,7 @@
 
 
 
-        <div class="card4 contenedor-cards">
+        <div data-aos="fade-left" class="card4 contenedor-cards">
             <div class="card4P4 cards">
                 <div class="caja-imgCard4 caja-imgCards">
                     <img class="imgCard4 imgCards" src="../img/estragon.png" alt="estragon">
@@ -109,7 +110,7 @@
 
 
 
-        <div class="card5 contenedor-cards">
+        <div data-aos="fade-right" class="card5 contenedor-cards">
             <div class="card5P4 cards">
                 <div class="caja-imgCard5 caja-imgCards">
                     <img class="imgCard5 imgCards" src="../img/eucalipto.png" alt="eucalipto">
@@ -125,7 +126,7 @@
 
 
 
-        <div class="card6 contenedor-cards">
+        <div data-aos="fade-left" class="card6 contenedor-cards">
             <div class="card6P4 cards">
                 <div class="caja-imgCard6 caja-imgCards">
                     <img class="imgCard6 imgCards" src="../img/florDeCera.png" alt="flor de cera>
@@ -141,7 +142,7 @@
 
 
 
-        <div class="card7 contenedor-cards">
+        <div data-aos="fade-right" class="card7 contenedor-cards">
             <div class="card7P4 cards">
                 <div class="caja-imgCard7 caja-imgCards">
                     <img class="imgCard7 imgCards" src="../img/hierbaBuena.png" alt="hierva buena">
@@ -157,7 +158,7 @@
 
 
 
-        <div class="card8 contenedor-cards">
+        <div data-aos="fade-left" class="card8 contenedor-cards">
             <div class="card8P4 cards">
                 <div class="caja-imgCard8 caja-imgCards">
                     <img class="imgCard8 imgCards" src="../img/laurel.png" alt="laurel">
@@ -173,7 +174,7 @@
 
 
 
-        <div class="card9 contenedor-cards">
+        <div data-aos="fade-right" class="card9 contenedor-cards">
             <div class="card9P4 cards">
                 <div class="caja-imgCard9 caja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/lavanda.png" alt="lavanda">
@@ -189,7 +190,7 @@
 
 
 
-        <div class="card10 contenedor-cards">
+        <div data-aos="fade-left" class="card10 contenedor-cards">
             <div class="card10P4 cards">
                 <div class="caja-imgCard10 caja-imgCards">
                     <img class="imgCard10 imgCards" src="../img/limonero.png" alt="limonero">
@@ -205,7 +206,7 @@
 
 
 
-        <div class="card11 contenedor-cards">
+        <div data-aos="fade-right" class="card11 contenedor-cards">
             <div class="card11P4 cards">
                 <div class="caja-imgCard11 caja-imgCards">
                     <img class="imgCard11 imgCards" src="../img/menta.png" alt="menta">
@@ -221,7 +222,7 @@
 
 
 
-        <div class="card12 contenedor-cards">
+        <div data-aos="fade-left" class="card12 contenedor-cards">
             <div class="card12P4 cards">
                 <div class="caja-imgCard12 caja-imgCards">
                     <img class="imgCard12 imgCards" src="../img/perejil.png" alt="perejil">
@@ -237,7 +238,7 @@
 
 
 
-        <div class="card13 contenedor-cards">
+        <div data-aos="fade-right" class="card13 contenedor-cards">
             <div class="card13P4 cards">
                 <div class="caja-imgCard13 caja-imgCards">
                     <img class="imgCard13 imgCards" src="../img/romero.png" alt="romero">
@@ -253,7 +254,7 @@
 
 
 
-        <div class="card14 contenedor-cards">
+        <div data-aos="fade-left" class="card14 contenedor-cards">
             <div class="card14P4 cards">
                 <div class="caja-imgCard14 caja-imgCards">
                     <img class="imgCard14 imgCards" src="../img/salvia.png" alt="salvia">
@@ -268,7 +269,7 @@
         </div>
 
 
-        <div class="card15 contenedor-cards">
+        <div data-aos="fade-right" class="card15 contenedor-cards">
             <div class="card15P4 cards">
                 <div class="caja-imgCard15 caja-imgCards">
                     <img class="imgCard15 imgCards" src="../img/tomillo.png" alt="tomillo">
@@ -284,7 +285,7 @@
 
 
 
-        <div class="card16 contenedor-cards">
+        <div data-aos="fade-left" class="card16 contenedor-cards">
             <div class="card16P4 cards">
                 <div class="caja-imgCard16 caja-imgCards">
                     <img class="imgCard16 imgCards" src="../img/toronjil.png" alt="toronjil">
@@ -300,7 +301,7 @@
     </div>
 
 
-            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+            <div class="caja-boton">
                 <input class="boton" type="button" value="ver mas">
             </div>
 
@@ -325,6 +326,8 @@
             </div>
         </footer>
         </div>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script> AOS.init(); </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
