--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="catalogo de plantas de exterior para darle vidad a tu hogar">
     <meta name="keywords" content="productos de jardinerias, plantas, cuidados de las plantas, consultas">
-        <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../icons/planta.ico" type="image/x-icon">
     <title>plantas para tu hogar</title>
@@ -46,7 +46,7 @@
 
     <div class="grid-plantas">
 
-        <div class="card1 contenedor-cards">
+        <div class="card1 contenedor-cards" data-aos="fade-right">
             <div class="card1P3 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/agave.png" alt="agave">
@@ -61,7 +61,7 @@
         </div>
 
 
-        <div class="card2 contenedor-cards">
+        <div class="card2 contenedor-cards" data-aos="fade-left">
             <div class="card2P3 cards">
                 <div class="caja-imgCard2 caja-imgCards">
                     <img class="imgCard2 imgCards" src="../img/clematis.png" alt="clemantis">
@@ -77,7 +77,7 @@
 
 
 
-        <div class="card3 contenedor-cards">
+        <div class="card3 contenedor-cards" data-aos="fade-right">
             <div class="card3P3 cards">
                 <div class="caja-imgCard3 caja-imgCards">
                     <img class="imgCard3 imgCards" src="../img/crisantemo.png" alt="crisantemo">
@@ -93,7 +93,7 @@
 
 
 
-        <div class="card4 contenedor-cards">
+        <div class="card4 contenedor-cards" data-aos="fade-left">
             <div class="card4P3 cards">
                 <div class="caja-imgCard4 caja-imgCards">
                     <img class="imgCard4 imgCards" src="../img/hiedra.png" alt="hiedra">
@@ -109,7 +109,7 @@
 
 
 
-        <div class="card5 contenedor-cards">
+        <div class="card5 contenedor-cards" data-aos="fade-right">
             <div class="card5P3 cards">
                 <div class="caja-imgCard5 caja-imgCards">
                     <img class="imgCard5 imgCards" src="../img/jazmin.png" alt="jazmin">
@@ -125,7 +125,7 @@
 
 
 
-        <div class="card6 contenedor-cards">
+        <div class="card6 contenedor-cards" data-aos="fade-left">
             <div class="card6P3 cards">
                 <div class="caja-imgCard6 caja-imgCards">
                     <img class="imgCard6 imgCards" src="../img/lavanda.png" alt="lavanda">
@@ -141,7 +141,7 @@
 
 
 
-        <div class="card7 contenedor-cards">
+        <div class="card7 contenedor-cards" data-aos="fade-right">
             <div class="card7P3 cards">
                 <div class="caja-imgCard7 caja-imgCards">
                     <img class="imgCard7 imgCards" src="../img/margarita.png" alt="margarita">
@@ -157,7 +157,7 @@
 
 
 
-        <div class="card8 contenedor-cards">
+        <div class="card8 contenedor-cards" data-aos="fade-left">
             <div class="card8P3 cards">
                 <div class="caja-imgCard8 caja-imgCards">
                     <img class="imgCard8 imgCards" src="../img/palmito.png" alt="palmito">
@@ -173,7 +173,7 @@
 
 
 
-        <div class="card9 contenedor-cards">
+        <div class="card9 contenedor-cards" data-aos="fade-right">
             <div class="card9P3 cards">
                 <div class="caja-imgCard9 caja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/rosal.png" alt="rosal">
@@ -188,7 +188,7 @@
         </div>
     </div>
 
-            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+            <div class="caja-boton"> 
                 <input class="boton" type="button" value="ver mas">
             </div>
 
@@ -214,5 +214,9 @@
         </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
