--- a/pages/interior.html
+++ b/pages/interior.html
@@ -7,6 +7,7 @@
     <meta name="description" content="catalogo de plantas de interior para darle vidad a tu hogar">
     <meta name="keywords" content="productos de jardinerias, plantas, cuidados de las plantas, consultas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../icons/planta.ico" type="image/x-icon">
     <title>plantas para tu hogar</title>
@@ -46,7 +47,7 @@
             
     <div class="grid-plantas">
     
-        <div class="card1 contenedor-cards">
+        <div data-aos="fade-right" class="card1 contenedor-cards">
             <div class="card1P2 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
@@ -62,7 +63,7 @@
 
 
 
-        <div class="card2 contenedor-cards">
+        <div data-aos="fade-left" class="card2 contenedor-cards">
             <div class="card2P2 cards">
                 <div class="caja-imgCard2 caja-imgCards">
                     <img class="imgCard2 imgCards img-fluid" src="../img/pataDeElefante.png" alt="planta pata de elefante">
@@ -77,7 +78,7 @@
         </div>
 
 
-        <div class="card3 contenedor-cards">
+        <div data-aos="fade-right" class="card3 contenedor-cards">
             <div class="card3P2 cards">
                 <div class="caja-imgCard3 caja-imgCards">
                     <img class="imgCard3 imgCards img-fluid" src="../img/marantaLeuconera.png" alt="planta maranta leuconeura">
@@ -92,7 +93,7 @@
         </div>
 
 
-        <div class="card4 contenedor-cards">
+        <div data-aos="fade-left" class="card4 contenedor-cards">
             <div class="card4P2 cards">
                 <div class="caja-imgCard4 caja-imgCards">
                     <img class="imgCard4 imgCards img-fluid" src="../img/helecho.png" alt="planta helecho">
@@ -107,7 +108,7 @@
         </div>
 
 
-        <div class="card5 contenedor-cards">
+        <div data-aos="fade-right" class="card5 contenedor-cards">
             <div class="card5P2 cards">
                 <div class="caja-imgCard5 caja-imgCards">
                     <img class="imgCard5 imgCards img-fluid" src="../img/ficusLyrata.png" alt="planta ficus lyrata">
@@ -121,7 +122,7 @@
             </div> 
         </div>
 
-        <div class="card6 contenedor-cards">
+        <div data-aos="fade-left" class="card6 contenedor-cards">
             <div class="card6P2 cards">
                 <div class="caja-imgCard6 caja-imgCards">
                     <img class="imgCard6 imgCards img-fluid" src="../img/cinta.png" alt="planta croton">
@@ -136,7 +137,7 @@
         </div>
 
 
-        <div class="card7 contenedor-cards">
+        <div data-aos="fade-right" class="card7 contenedor-cards">
             <div class="card7P2 cards">
                 <div class="caja-imgCard7 caja-imgCards">
                     <img class="imgCard7 imgCards img-fluid" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
@@ -151,7 +152,7 @@
         </div>
 
 
-        <div class="card8 contenedor-cards">
+        <div data-aos="fade-left" class="card8 contenedor-cards">
             <div class="card8P2 cards">
                 <div class="caja-imgCard8 caja-imgCards">
                     <img class="imgCard8 imgCards img-fluid" src="../img/anturio.png" alt="planta collar de corazones">
@@ -166,7 +167,7 @@
         </div>
 
 
-        <div class="card9 contenedor-cards">
+        <div data-aos="fade-right" class="card9 contenedor-cards">
             <div class="card9P2 cards">
                 <div class="caja-imgCard9 caja-imgCards">
                     <img class="imgCard9 imgCards img-fluid" src="../img/cactus.png" alt="planta collar de corazones">
@@ -184,7 +185,7 @@
 
 
 
-            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+            <div class="caja-boton">
                 <input class="boton" type="button" value="ver mas">
             </div>
 
@@ -209,6 +210,8 @@
             </div>
         </footer>
         </div>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script> AOS.init(); </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
